# asteroidsyncservice

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  asteroidsyncservice.pro  asteroidsyncservice_config.h.in
asteroidsyncservice/: .gitignore  CMakeLists.txt  asteroidsyncservice.pro  qmldir  servicecontrol.cpp  starfish.pri  syncservice_plugin.cpp  syncservice_plugin.h  telescope.pri  watch.cpp  watch.h  watches.cpp
asteroidsyncserviced/: .gitignore  CMakeLists.txt  asteroidsync.service  asteroidsync.service.in  asteroidsyncserviced.pro  asteroidsyncserviced.service  dbusinterface.cpp  dbusinterface.h  harbour-asteroidsyncserviced.service  main.cpp  openweathermapparser.cpp  openweathermapparser.h  starfish.pri  telescope.pri  watchesmanager.cpp  watchesmanager.h
asteroidsyncserviced/bluez/: bluezclient.cpp  bluezclient.h  bluezclient_p.h  dbus-shared.h
doc/: 01_intro.md  02_architecture.md  03_dbus.md  04_daemon.md  99_glossary.md  CMakeLists.txt  doxygen.conf.in
rpm/: asteroidsyncservice.spec
